<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mapsFragment"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_hist"
            android:title="@string/menu_historico_dol" />
        <item
            android:id="@+id/nav_ing_tienda"
            android:title="@string/menu_ingresar_tienda" />
        <item
            android:id="@+id/nav_admin"
            android:title="@string/menu_admin_tienda" />
        <item
            android:id="@+id/nav_noti"
            android:title="@string/menu_notificaciones" />
        <item
            android:id="@+id/nav_config"
            android:title="@string/menu_configuraciones" />
        <item
            android:id="@+id/nav_cerrar"
            android:title="@string/menu_cerrar_sesion" />
    </group>
</menu>