<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/mapsFragment">

    <fragment
        android:id="@+id/mapsFragment"
        android:name="com.cambiofacil3.MapsFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/nav_mapa"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:label="@string/menu_mapa"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_hist"
        android:name="com.cambiofacil3.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_ing_tienda"
        android:name="com.cambiofacil3.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.cambiofacil3.BlankFragment"
        android:label="fragment_blank"
        tools:layout="@layout/fragment_blank" />

</navigation>